--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
         <h1>Griffpatch Scratch Font Converter</h1>
         <p><i>Adapted directly from RexScratch's Stamp Font Engine Font Injector</i></p>
 
-        <h6><b>Step 1</b> - Download a Font File to your device (i.e. from Google Fonts .ttf, .otf or .zip)</h6>
+        <h6><b>Step 1</b> - Download Font Files (ttf,otf,zip) to your device</h6>
 
         <!-- <div class="input-holder">
             <label>Google font: <select id="selectFamily" class="input"></select></label>
         </div> -->
 
-        <p><a href="https://fonts.google.com/">https://fonts.google.com/</a></p>
+        <p><a href="https://fonts.google.com/">https://fonts.google.com/</a> - A wonderful resource for free fonts!</p>
         <br>
 
         <h6><b>Step 2</b> - Import the font into this page here:</h6>
