Make link open in new tav

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <label>Google font: <select id="selectFamily" class="input"></select></label>
         </div> -->
 
-        <p><a href="https://fonts.google.com/">https://fonts.google.com/</a> - A wonderful resource for free fonts!</p>
+        <p><a href="https://fonts.google.com/" target="_blank">https://fonts.google.com/</a> - A wonderful resource for free fonts!</p>
         <br>
 
         <h6><b>Step 2</b> - Import the font into this page here:</h6>
